src/test/data/c/fail/vla_global.c
int g(void);
int a[g()];
