src/test/data/c/fail/vla_global.c.err
data/c/fail/vla_global.c:2:7-10: error: expression does not reduce to an integer constant
 2 | int a[g()];
   |       ^~~
